<resources>
    <string name="app_name">runoobApp</string>
    <string name="text_content">Hello this is runoob android APP!
        Android development from this moment: 2023/01/09</string>
    <string name="USERNAME_INPUT_HINT">请输入用户号码</string>
    <string name="PASSWORD_INPUT_HINT">请输入密码</string>
    <string name="GET_USERINFO_TEXT">获取用户信息</string>
    <string name="FIRST_BUTTON_TEXT">a native button</string>
    <string name="IMAGE_DESCRIPTION">river image</string>
    <string name="PROGRESS_BUTTON_TEXT">show/hide progress bar!</string>
    <string name="DOWNLOAD_BAR_TEXT">模拟下载进度条</string>
    <string name="BUTTON_PUSH_TEXT">推送通知</string>
    <string name="BUTTON_CANCEL_TEXT">取消通知</string>
    <string name="NOTIFY_TEXT">this is a new activity!</string>
    <string name="TOOLBAR_TITLE_TEXT">New page title</string>
    <string name="TOOLBAR_SUBTITLE_TEXT">sub title</string>
    <string name="TOOLBAR_CENTER_TEXT">this is center text</string>
    <string name="DIALOG_TEXT">hi, good weather today!</string>
    <string name="DIALOG_BUTTON_TEXT">显示对话框</string>
    <string name="ALARM_ICON_DESCRIPTION">alarm icon</string>
    <string name="POPUP_WINDOW_TEXT">show popup window</string>
    <string name="VIEW_POPUP_BUTTON_TEXT">pop</string>
    <string name="JUMP_NEW_PAGE_TEXT">jump new page button</string>
    <string name="JUMP_RELATIVE_PAGE">jump to relative layout page!</string>
    <string name="JUMP_FRAME_PAGE">jump to frame layout page!</string>
    <string name="FIRST_BUTTON_ROW_ONE">first table button in row one</string>
    <string name="SECOND_BUTTON_ROW_ONE">second table button in row one</string>
    <string name="FIRST_BUTTON_ROW_TWO">first table button in row two</string>
    <string name="SECOND_BUTTON_ROW_TWO">second table button in row two</string>
    <string name="FIRST_BUTTON_ROW_THREE">first table button in row three</string>
    <string name="JUMP_TABLE_LAYOUT_PAGE">jump to table layout page!</string>
    <string name="GRID_BUTTON_TEXT">button in grid text</string>
    <string name="JUMP_GRID_LAYOUT_PAGE">jump to grid layout page!</string>
    <string name="CONSTRAINT_BUTTON_TEXT">constraint button</string>
    <string name="JUMP_CONSTRAINT_PAGE">jump to constraint layout page!</string>
    <string name="JUMP_RECYCLE_PAGE">jump to recycle layout page!</string>
    <string name="JUMP_ANIMATION_PAGE">jump to animation page!</string>
    <string name="JUMP_VIEW_ANIMATION_PAGE">jump to view animation page!</string>
    <string name="JUMP_VALUE_ANIMATOR_PAGE">jump to value animator page!</string>
    <string name="VALUE_ANIMATOR_TEXT">this is value animator:%1$.2f</string>
    <string name="title_activity_viwe_pager">ViwePagerActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="JUMP_VIEW_PAGER">jump to view pager!</string>
    <string name="SECOND_VIEW_TEXT">second view layout</string>
    <string name="FIRST_VIEW_TEXT">first view layout</string>
    <string name="THIRD_VIEW_TEXT">third view layout</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="JUMP_FRAGMENT_PAGE">jump to fragment page!</string>
    <string name="HELLO_FRAGMENT_TEXT">Hello, init message</string>
    <string name="CHANGE_FRAGMENT_TEXT">change to another fragment</string>
    <string name="CHANGE_CONTENT_TEXT">更换textView 文字内容</string>
    <string name="PASS_MESSAGE_TEXT">给activity传递消息</string>
    <string name="FRAGMENT_MESSAGE_TEXT">fragment message to activity!</string>
    <string name="BUTTON_SET_TEXT">here comes from button click!</string>
    <string name="HOUSE_COUNTDOWN_TEXT">jump to house countdown page!</string>
    <string name="JUMP_SERVICE_PAGE">jump to service page!</string>
    <string name="START_SERVICE_TEXT">click to start a service</string>
    <string name="STOP_SERVICE_TEXT">click to stop a service</string>
    <string name="BIND_SERVICE_TEXT">click to bind a service</string>
    <string name="UNBIND_SERVICE_TEXT">click to unbind a service</string>
    <string name="JUMP_BROADCAST_PAGE">jump to braoadcast page!</string>
    <string name="SENT_BROADCAST_TEXT">send broadcast!</string>
    <string name="REGISTER_DYNAMIC_BROADCAST_TEXT">动态注册广播 发送广播区域</string>
    <string name="SEND_DYNAMIC_BROADCAST_TEXT">发送广播</string>
    <string name="JUMP_IMAGE_LOAD_TEXT">jump to glide image page!</string>
    <string name="JUMP_REQUEST_PAGE">jump to request page!</string>
    <string name="SEND_SYNC_GET_REQUEST">发送同步GET请求</string>
    <string name="SEND_ASYNC_GET_REQUEST">发送异步GET请求</string>
    <string name="SEND_SYNC_POST_REQUEST">发送同步POST请求</string>
    <string name="SEND_ASYNC_POST_REQUEST">发送异步POST请求</string>
    <string name="JUMP_RETROFIT_PAGE">jump to retrofit page!</string>
    <string name="SEND_RETROFIT_POST_REQUEST">retrofit ：发送异步POST请求</string>
    <string name="SEND_RETROFIT_GET_REQUEST">retrofit ：发送异步GET请求</string>
    <string name="CONVERT_JSON_TO_BEAN">convert json to bean ：发送异步POST请求</string>
    <string name="AUTO_CONVERT_JSON">auto convert json：发送异步POST请求</string>
    <string name="JUMP_RXJAVA_PAGE">jump to rxjava page!</string>
    <string name="RX_SHOW_IMAGE">RX TO Show image!</string>
    <string name="JUMP_SP_PAGE">jump shared preference page!</string>
    <string name="SAVE_SP_DATE">保存数据到SP</string>
    <string name="GET_SP_DATA">从SP获取数据</string>
    <string name="JUMP_TO_WEBVIEW_PAGE">jump to webview page!</string>
    <string name="INPUT_URL_PATH">请输入页面地址</string>
    <string name="JUMP_SP_DEMO">jump sp demo page!</string>
    <string name="LOGIN_USERNAME">用户名</string>
    <string name="INPUT_USERNAME_HINT">请输入用户名</string>
    <string name="USER_PASSWORD_TEXT">密码</string>
    <string name="INPUT_PASSWORD_HINT">请输入密码</string>
    <string name="REMEMBER_PASSWORD_TEXT">记住密码</string>
    <string name="AUTO_LOGIN_TEXT">自动登录</string>
    <string name="REGISTER_TEXT">注册</string>
    <string name="LOGIN_TEXT">登录</string>
    <string name="CREATE_DATABASE_TEXT">create db button</string>
    <string name="QUERY_DATABASE_TEXT">query db button</string>
    <string name="INSERT_DATABASE_TEXT">insert db button</string>
    <string name="UPDATE_DATABASE_TEXT">update db button</string>
    <string name="DELETE_DATABASE_TEXT">delete db button</string>
    <string name="JUMP_SQLITE_PAGE">jump to sqlite demo page!</string>
    <string name="DIVIDE_CONTENT_TEXT">this is a divide text to show that content below is developed by room</string>
    <string name="DELETE_ALL_DATA_TEXT">delete all table data button</string>
    <string name="JUMP_MEDIA_PAGE">jump to media demo page!</string>
    <string name="START_RECORD_TEXT">start</string>
    <string name="REQUIRE_MEDIA_PERMISSION">requireMediaPermission</string>
    <string name="JUMP_MEDIA_PLAYER_PAGE">jump to media play page!</string>
    <string name="JUMP_VIDEO_VIEW_TEXT">jump video view play page!</string>
    <string name="PLAY_MUSIC_TEXT">play music button!</string>
    <string name="SOUND_PLAY_TEXT">jump to sound play page!</string>
    <string name="GET_CONTACTS_TEXT">get mobile contacts!</string>
    <string name="JUMP_CONTACTS_DEMO_TEXT">jump to contacts demo page!</string>
    <string name="REQUEST_CONTACT_PERMISSION">request contacts permission</string>
    <string name="JUMP_POPUP_PAGE">jump to popup window page</string>
    <string name="JUMP_AMAP_PAGE">jump to ampap location page</string>
    <string name="common_loading">加载中&#8230;</string>
    <string name="common_unknown_error">未知错误</string>
    <string name="common_confirm">确定</string>
    <string name="common_cancel">取消</string>
    <string name="common_year">年</string>
    <string name="common_month">月</string>
    <string name="common_day">日</string>
    <string name="common_hour">时</string>
    <string name="common_minute">分</string>
    <string name="common_second">秒</string>
    <string name="common_crash_hint">应用出了点小意外，正在重新启动</string>
    <string name="common_network_error">当前网络不可用，请检查网络设置</string>
    <string name="common_video_error_not_support">该视频不适合在此设备上播放</string>
    <string name="common_video_error_unknown">无法播放此视频</string>
    <string name="common_video_error_supplement">错误类型：%d，错误代码：%d</string>
    <string name="common_phone_input_hint">请输入手机号码</string>
    <string name="common_phone_input_error">手机号输入不正确</string>
    <string name="common_password_input_error">请输入密码</string>
    <string name="common_password_input_unlike">两次密码输入不一致，请重新输入</string>
    <string name="common_code_input_hint">请输入验证码</string>
    <string name="common_code_send">发送验证码</string>
    <string name="common_code_send_hint">验证码已发送，请注意查收</string>
    <string name="common_code_error_hint">验证码错误，请检查输入</string>
    <string name="common_step_next">下一步</string>
    <string name="common_step_complete">完成</string>
    <string name="common_step_commit">提交</string>
    <string name="common_permission_alert">授权提醒</string>
    <string name="common_permission_fail_1">授权失败，请正确授予权限</string>
    <string name="common_permission_fail_2">获取权限失败，请手动授予权限</string>
    <string name="common_permission_fail_3">获取权限失败，请手动授予%s</string>
    <string name="common_permission_fail_4">没有授予后台定位权限，请您选择"始终允许"</string>
    <string name="common_permission_goto">前往授权</string>
    <string name="common_permission_calendar">日历权限</string>
    <string name="common_permission_camera">相机权限</string>
    <string name="common_permission_contacts">通讯录权限</string>
    <string name="common_permission_location">定位权限</string>
    <string name="common_permission_location_background">后台定位权限</string>
    <string name="common_permission_microphone">麦克风权限</string>
    <string name="common_permission_phone">电话权限</string>
    <string name="common_permission_call_log">通话记录权限</string>
    <string name="common_permission_sensors">身体传感器权限</string>
    <string name="common_permission_activity_recognition">健身运动权限</string>
    <string name="common_permission_sms">短信权限</string>
    <string name="common_permission_storage">存储权限</string>
    <string name="common_permission_install">安装应用权限</string>
    <string name="common_permission_notification">通知栏权限</string>
    <string name="common_permission_window">悬浮窗权限</string>
    <string name="common_permission_setting">系统设置权限</string>
    <string name="common_network_hint">当前没有网络连接，请检查网络设置</string>
    <string name="common_no_more_data">没有更多数据了</string>
    <string name="common_web_ssl_error_title">当前网站安全证书已过期或不可信\n是否继续浏览</string>
    <string name="common_web_ssl_error_allow">继续浏览</string>
    <string name="common_web_ssl_error_reject">返回上一页</string>
    <string name="common_web_location_permission_title">当前网站需要获取您的地理位置</string>
    <string name="common_web_location_permission_allow">授予</string>
    <string name="common_web_location_permission_reject">拒绝</string>
    <string name="common_web_call_phone_title">当前号码 %s</string>
    <string name="common_web_call_phone_allow">拨打</string>
    <string name="common_web_call_phone_reject">取消</string>
    <string name="http_loading">加载中&#8230;</string>
    <string name="http_unknown_error">请求出错，未知错误</string>
    <string name="http_token_error">登录失效，请重新登录</string>
    <string name="http_data_explain_error">数据解析异常，请稍后</string>
    <string name="http_server_out_time">服务器请求超时，请稍后再试</string>
    <string name="http_network_error">请求失败，请检查网络设置</string>
    <string name="http_response_error">服务器响应异常，请稍后再试</string>
    <string name="http_server_error">服务器连接异常，请稍后再试</string>
    <string name="http_request_cancel">请求被中断，请重试</string>
    <string name="status_layout_no_data">空空如也</string>
    <string name="status_layout_error_request">请求出错，请重试</string>
    <string name="status_layout_error_network">网络错误，请重试</string>
    <string name="status_layout_retry">重试</string>
</resources>