<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.spDemo.SPDemoActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LOGIN_USERNAME"
        android:textSize="20sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sp_input_name"
        android:hint="@string/INPUT_USERNAME_HINT"
        android:textSize="30sp"
        android:inputType="text" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/USER_PASSWORD_TEXT"
        android:textSize="20sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sp_input_pwd"
        android:hint="@string/INPUT_PASSWORD_HINT"
        android:inputType="numberPassword"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/check_remember_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/REMEMBER_PASSWORD_TEXT"
            android:textSize="15sp" />

        <CheckBox
            android:id="@+id/check_auto_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/AUTO_LOGIN_TEXT"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_register_user"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/REGISTER_TEXT"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btn_login_user"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/LOGIN_TEXT"
            style="?android:attr/buttonBarButtonStyle" />


    </LinearLayout>


</LinearLayout>