<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableRow>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/FIRST_BUTTON_ROW_ONE"
            android:textAllCaps="false"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SECOND_BUTTON_ROW_ONE"
            android:textAllCaps="false"
            style="?android:attr/buttonBarButtonStyle" />
    </TableRow>
    <TableRow>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/FIRST_BUTTON_ROW_TWO"
            android:textAllCaps="false"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SECOND_BUTTON_ROW_TWO"
            android:textAllCaps="false"
            style="?android:attr/buttonBarButtonStyle" />
    </TableRow>
    <TableRow>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/FIRST_BUTTON_ROW_THREE"
            android:textAllCaps="false" />
    </TableRow>

</TableLayout>