<?xml version="1.0" encoding="utf-8"?>

<!--TODO:layout布局文件放到子文件夹就会报错,不知道为啥-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/red"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_ios_24"
        app:subtitle="@string/TOOLBAR_SUBTITLE_TEXT"
        app:subtitleTextColor="@color/gray"
        app:title="@string/TOOLBAR_TITLE_TEXT"
        app:titleMarginStart="50dp"
        app:titleTextColor="@color/black" />

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/purple_200"
        android:layout_marginTop="10dp"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_ios_24"
        app:titleTextColor="@color/black">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center"
            android:layout_gravity="center"
            android:text="@string/TOOLBAR_CENTER_TEXT"
            android:textColor="@color/red"
            android:textSize="18sp" />
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@color/gray"
        android:gravity="center_vertical|center"
        android:text="@string/NOTIFY_TEXT"
        android:textColor="@color/red"
        android:textSize="18sp" />

    <Button
        android:text="@string/DIALOG_BUTTON_TEXT"
        android:layout_marginTop="10dp"
        android:onClick="showDialog"
        android:background="@color/purple_700"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:text="@string/POPUP_WINDOW_TEXT"
        android:onClick="showPopup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</LinearLayout>