<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/popup_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/red"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_ios_24"
        app:subtitle="@string/TOOLBAR_SUBTITLE_TEXT"
        app:subtitleTextColor="@color/gray"
        app:title="@string/TOOLBAR_TITLE_TEXT"
        app:titleMarginStart="50dp"
        app:titleTextColor="@color/black" />

    <TextView
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@color/gray"
        android:gravity="center_vertical|center"
        android:text="@string/NOTIFY_TEXT"
        android:textColor="@color/red"
        android:onClick="jumpBizPage"
        android:textSize="18sp" />

    <Button
        android:text="@string/POPUP_WINDOW_TEXT"
        android:onClick="showPopupWidow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:text="jump dynamic page! "
        android:onClick="jumpDynamicPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:text="jump dynamic test page! "
        android:onClick="jumpDynamicTestPage"
        android:layout_width="wrap_content"
        android:textAllCaps="false"
        android:layout_height="wrap_content"/>
    <Button
        android:text="add dynamic image view! "
        android:onClick="addImage"
        android:layout_width="wrap_content"
        android:textAllCaps="false"
        android:layout_height="wrap_content"/>


</LinearLayout>